# fractal-guide

./: README.md  pyproject.toml  test_geo.py
fractal_guide/: app.py
fractal_guide/docs/: overall_design.md
fractal_guide/services/: geocode.py  llm.py
fractal_guide/src/: main.py
tests/: test_geocode.py  test_llm.py
